--- a/BotBreinlogic-codespace-special-doodle-jjj95pj697pxc4qj/package.json
+++ b/BotBreinlogic-codespace-special-doodle-jjj95pj697pxc4qj/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "start": "vite --port 8000",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -31,6 +32,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
