--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.9.0",
     "node": "^18.20.7",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
