--- a/HOME/vercel.json
+++ b/HOME/vercel.json
@@ -1,9 +1,16 @@
+
 {
   "version": 2,
   "builds": [
-    { "src": "dist/home-page-breinlogic/**", "use": "@vercel/static" }
+    {
+      "src": "dist/home-page-breinlogic/**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
