--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://tuusuario.github.io/BreinLogic",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "vite --port 3000",
-    "deploy": "gh-pages -d dist",
-    "homepage": "/BreinLogic"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -18,7 +18,6 @@
     "file-saver": "^2.0.5",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.9.0",
-    "node": "^18.20.7",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^2.16.105",
